# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
tests/: test_main.py
