[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jorge Calavia <jorge@calavia.org>"]
readme = "README.md"
packages = [{include = "template"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
